--- a/package.json
+++ b/package.json
@@ -41,16 +41,19 @@
             "react-dom": "^18.3.1",
             "react-hook-form": "^7.55.0",
             "react-resizable-panels": "^2.1.7",
+            "react-router-dom": "^7.13.0",
             "recharts": "^2.15.2",
             "sonner": "^2.0.3",
             "tailwind-merge": "*",
-            "vaul": "^1.1.2"
+            "vaul": "^1.1.2",
+            "zustand": "^5.0.11"
       },
       "devDependencies": {
-            "@types/node": "^20.10.0",
-            "@types/react": "^19.2.10",
+            "@types/node": "^20.19.31",
+            "@types/react": "^19.2.11",
             "@types/react-dom": "^19.2.3",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "typescript": "^5.9.3",
             "vite": "6.3.5"
       },
       "scripts": {
